--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<p>THIS IS NEW REPO</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>THIS IS NEW REPO</p>
 <p>This is a feature (button)</p>
 
 <p>This is a feature (dropdown)</p>
 
+</body>
+</html>
